methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: illegal start of simple expression
  while(vuBiscuit);{
                  ^